# ambient_image_processor

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README.txt  deploy.sh  metrics.sh  optimize.sh  plot.sh  todo.txt
bash/: tgvk_deshade_downsampled_batch.sh
gnuplot/: plot_data.gp
octave/: tgv2_deshade.m
ruby/: Gemfile  optimize.rb  optimize_block_count.rb  optimize_metric_and_plot.rb
ruby/configurations/: sample1_adelson.rb  sample2_logvinenko.rb  sample4_mr.rb  sample4_mr_64.rb  sample4_mr_m02.rb  sample4_mr_slice3_without_denoising.rb
scripts/: deploy.sh  plot.sh
scripts/bash/: tgvk_deshade_downsampled_batch.sh
scripts/gnuplot/: plot_data.gp
scripts/octave/: tgv2_deshade.m  tgv2_deshade_plot.m
scripts/octave/bias_simulator/: combine_image_and_field.m  create_linear_bias.m  create_z_field.m  normalize_image.m
scripts/python/: task_list.txt  tgv_dct_deshade_evalutor.py
scripts/ruby/: optimize.rb  optimize_block_count.rb
scripts/ruby/source_header/: SOURCE_HEAD.txt  add_source_head.rb
source/: ITKImageProcessor.cpp  ITKImageProcessor.h  ITKToQImageConverter.h  ImageWidget.cpp  ImageWidget.h  ImageWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ambient_main.cpp  linear_retinex_console.cpp
source/cuda/: CudaImageProcessor.cpp  CudaImageProcessor.h  ITKRawImageConverter.cpp  ITKRawImageConverter.h  RawImage.cpp  RawImage.h  cuda_kernels.cu
source/deshade_segmented/: CMakeLists.txt  DeshadeSegmentedProcessor.h  DeshadeSegmentedWidget.cpp  DeshadeSegmentedWidget.h  DeshadeSegmentedWidget.ui
source/itk_image/: CMakeLists.txt  ITKImage.cpp  ITKImage.h
source/model/: Circle.cpp  Circle.h  CircleFactory.cpp  CircleFactory.h  CircleImage.cpp  CircleImage.h
source/model/itk/: ITKCircleImage.cpp  ITKCircleImage.h  Optimizer.cpp  Optimizer.h
source/modules/base_module/: BaseModule.cpp  BaseModule.h  BaseModuleWidget.cpp  BaseModuleWidget.h  CMakeLists.txt
source/modules/bilateral_filter/: BilateralFilterProcessor.cpp  BilateralFilterProcessor.h  BilateralFilterWidget.cpp  BilateralFilterWidget.h  BilateralFilterWidget.ui  CMakeLists.txt  bilateral_filter_kernel.cu
source/modules/binary_operations/: BinaryOperationsWidget.cpp  BinaryOperationsWidget.h  BinaryOperationsWidget.ui  CMakeLists.txt
source/modules/bspline_interpolation/: BSplineInterpolationProcessor.cpp  BSplineInterpolationProcessor.h  BSplineInterpolationWidget.cpp  BSplineInterpolationWidget.h  BSplineInterpolationWidget.ui  CMakeLists.txt
source/modules/conjugate_gradient/: CMakeLists.txt  ConjugateGradientAlgorithm.cpp  ConjugateGradientAlgorithm.h  ConjugateGradientWidget.cpp  ConjugateGradientWidget.h  ConjugateGradientWidget.ui  ImageMatrix.cpp  ImageMatrix.h  ImageMatrixGradientFactory.cpp  ImageMatrixGradientFactory.h  ImageVectorOperations.cpp  ImageVectorOperations.h  image_matrix_kernels.cu  image_vector_operations_kernels.cu
source/modules/convolution/: CMakeLists.txt  ConvolutionWidget.cpp  ConvolutionWidget.h  ConvolutionWidget.ui
source/modules/crosshair/: CMakeLists.txt  CrosshairModule.cpp  CrosshairModule.h
source/modules/cuda/: CMakeLists.txt  cuda_helper.cuh  cuda_helper.in  cuda_host_helper.in
source/modules/cuda_image_operations/: CMakeLists.txt  CudaImageOperationsProcessor.cpp  CudaImageOperationsProcessor.h  add.cu  add_constant.cu  binarize.cu  binary_dilate.cu  binary_operation.cu  clamp_negative_values.cu  convolution3x3.cu  convolution3x3x3.cu  cosine_transform.cu  div_grad.cu  div_grad_2d.cu  divergence.cu  divergence_2d.cu  divide.cu  exp.cu  inverse_cosine_transform.cu  invert.cu  log.cu  multiply.cu  multiply_constant.cu  rotate_180_in_plane.cu  solve_poisson_in_cosine_domain.cu  subtract.cu  tv.cu  unary_operation.cu
source/modules/deshade_segmented/: CMakeLists.txt  DeshadeSegmentedProcessor.cpp  DeshadeSegmentedProcessor.h  DeshadeSegmentedWidget.cpp  DeshadeSegmentedWidget.h  DeshadeSegmentedWidget.ui
source/modules/extract/: CMakeLists.txt  ExtractProcessor.cpp  ExtractProcessor.h  ExtractWidget.cpp  ExtractWidget.h  ExtractWidget.ui
source/modules/histogram/: CMakeLists.txt  ChartWidget.cpp  ChartWidget.h  ChartWidget.ui  HistogramProcessor.cpp  HistogramProcessor.h  HistogramWidget.cpp  HistogramWidget.h  HistogramWidget.ui  kernel_density_estimation.cu
source/modules/image_information/: CMakeLists.txt  ImageInformationProcessor.cpp  ImageInformationProcessor.h  ImageInformationWidget.cpp  ImageInformationWidget.h  ImageInformationWidget.ui
source/modules/image_view/: CMakeLists.txt  ITKToQImageConverter.cpp  ITKToQImageConverter.h  ImageViewWidget.cpp  ImageViewWidget.h  ImageViewWidget.ui
source/modules/image_view_control/: CMakeLists.txt  ImageViewControlWidget.cpp  ImageViewControlWidget.h  ImageViewControlWidget.ui
source/modules/image_widget/: CMakeLists.txt  ITKImageProcessor.cpp  (+6 more)
source/non_local_gradient/: CMakeLists.txt  NonLocalGradientKernelWidget.cpp  NonLocalGradientProcessor.cpp  NonLocalGradientProcessor.h  NonLocalGradientWidget.ui  non_local_gradient_kernel.cu
source/qcustomplot/: qcustomplot.h
source/retinex/: MultiScaleRetinexScale.cpp  MultiScaleRetinexScale.ui  ShrinkFunctor.cpp  ShrinkFunctor.h
source/segmentation/: RegionGrowingSegmentation.cpp  RegionGrowingSegmentation.h  RegionGrowingSegmentationProcessor.cpp  RegionGrowingSegmentationProcessor.h  RegionGrowingSegmentationWidget.cpp  RegionGrowingSegmentationWidget.h  RegionGrowingSegmentationWidget.ui  SegmentsToLabelImageConverter.cpp  SegmentsToLabelImageConverter.h
source/terminal_programs/: CMakeLists.txt  tgv2_deshade_convergence_test_main.cpp  tgv2_deshade_main.cpp  tgvk_deshade_downsampled_evaluator_main.cpp  tgvk_deshade_downsampled_main.cpp
source/terminal_programs/image_metrics/: CMakeLists.txt  image_metric_to_sqlite_main.cpp
source/terminal_programs/sqlite_to_gnuplot/: CMakeLists.txt  sqlite_to_gnuplot_main.cpp
source/thrust_tgv/: CMakeLists.txt  Image.cu  Image.cuh  TGVProcessor.cpp  TGVProcessor.h  TGVWidget.cpp  TGVWidget.h  TGVWidget.ui  image_tests_console.cpp  tgv_kernel.cu  thrust_operators.cuh
(+294 files in other folders)
